--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -1,8 +1,12 @@
 .navbar-nav a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 .navbar-brand a {
   text-decoration: none;
-  color: black;
+  color: white;
+}
+
+.customNav {
+  background: linear-gradient(135deg, #4a3a7c 0%, #7a399d 100%);
 }
