--- a/src/Pages/Error404/Error404.css
+++ b/src/Pages/Error404/Error404.css
@@ -2,21 +2,12 @@
 
 /** Styles for the 403 Page **/
 
-.particle-error,
-.permission_denied,
-.tsparticles {
-  width: 100%;
-  height: 100%;
-  margin: 0px !important;
-}
-
-.tsparticles {
-  position: fixed !important;
-  opacity: 0.23;
-}
-
 .permission_denied {
-  background: #24344c !important;
+  background: #24344c;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .permission_denied a {
@@ -24,13 +15,11 @@
 }
 
 .denied__wrapper {
-  max-width: 390px;
   width: 100%;
   height: 390px;
   display: block;
   margin: 0 auto;
   position: relative;
-  margin-top: 8vh;
 }
 
 .permission_denied h1 {
@@ -94,36 +83,6 @@
   opacity: 1;
 }
 
-.permission_denied .stars {
-  animation: sparkle 1.6s infinite ease-in-out alternate;
-}
-
-@keyframes sparkle {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.3;
-  }
-}
-
-.astronaut {
-  width: 43px;
-  position: absolute;
-  right: 20px;
-  top: 210px;
-  animation: spin 4.5s infinite linear;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotateZ(0deg);
-  }
-  100% {
-    transform: rotateZ(360deg);
-  }
-}
-
 @media (max-width: 600px) {
   .permission_denied h1 {
     font-size: 75px;
@@ -141,20 +100,5 @@
     width: 35px;
     right: 40px;
     top: 170px;
-  }
-}
-
-.saturn,
-.saturn-2,
-.hover {
-  animation: hover 2s infinite ease-in-out alternate;
-}
-
-@keyframes hover {
-  0% {
-    transform: translateY(3px);
-  }
-  100% {
-    transform: translateY(-3px);
   }
 }
